# semeja

./: .gitignore  CODE_STYLE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
agents/: semeja-search.md
examples/: bench.rs
src/: bm25.rs  chunk.rs  cli.rs  embed.rs  index.rs  lang.rs  lang_table.rs  lib.rs  mcp.rs  search.rs  stats.rs  tokenize.rs  types.rs  utils.rs  walk.rs
src/rank/: boost.rs  mod.rs  penalty.rs  weight.rs
tests/: chunker_tests.rs  cli_tests.rs  file_walker_tests.rs  files_tests.rs  git_tests.rs  index_tests.rs  mcp_tests.rs  ranking_tests.rs  search_tests.rs  stats_tests.rs
tests/common/: mod.rs
