[package]
name = "semeja"
version = "0.0.1"
edition = "2021"
description = "Fast and accurate code search for agents"
license = "MIT"
repository = "https://github.com/wegel/semeja"
readme = "README.md"
keywords = ["code-search", "semantic-search", "bm25", "agent", "embeddings"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "semeja"
path = "src/lib.rs"

[[bin]]
name = "semeja"
path = "src/bin/semeja.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
indexmap = "2"
model2vec-rs = "0.2.0"
rayon = "1.12.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tree-sitter = "0.26"
tree-sitter-ada = "0.1.0"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-cuda = "0.21.1"
tree-sitter-dart = "0.2.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-elm = "5.9.0"
tree-sitter-erlang = "0.17.0"
tree-sitter-fsharp = "0.3.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-graphql = "0.1.0"
tree-sitter-groovy = "0.1.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-hcl = "1.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-julia = "0.23.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-language = "0.1.7"
tree-sitter-lua = "0.5.0"
tree-sitter-make = "1.1.1"
tree-sitter-md = "0.5.3"
tree-sitter-nix = "0.3.0"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.25.0"
tree-sitter-perl = "1.1.2"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-proto = "0.4.0"
tree-sitter-python = "0.23"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-scheme = "0.24.7"
tree-sitter-sequel = "0.3.11"
tree-sitter-solidity = "1.2.13"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-swift = "0.7.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-verilog = "1.0.3"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
